add specifications to swagger
