# src/swagger.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "RentalX Documentation",
+        "title": "RentX Documentation",
         "description": "This is an rent API",
         "version": "1.0.0",
         "contact": "luismiguel_silvaamorim@hotmail.com"
@@ -21,7 +21,9 @@
                                     "name": {
                                         "type": "string"
                                     },
-                                    "description": "string"
+                                    "description": {
+                                        "type": "string"
+                                    }
                                 },
                                 "example": {
                                     "name": "Category Test",
@@ -66,6 +68,42 @@
                             }
                         }
                     }
+                }
+            }
+        },
+        "/specifications": {
+            "post": {
+                "tags": ["Specifications"],
+                "summary": "Create Specification",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Specification"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description":"Specification already exists"
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Specification": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
                 }
             }
         }
